--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <article>
             <h1>Hello, World!</h1>
-            <p>My name is Artur and I'm 17 years old student from Latvia! <br>I'm studying programming languages such as C & C#. <br>Also, I have little skills with Python and Lua, but I don't liked it so much as C family.</p>
+            <p>My name is Artur and I'm 17 years old student from Latvia! <br>I'm studying programming languages such as C, C++, C#. <br>Also, I have little skills with Python and Lua, but I don't liked it so much as C family.</p>
             <section>
                 
             </section>
